--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Luminerds - Dijital Pazarlama, Sosyal Medya Yönetimi, Ürün Videosu, Tanıtım Filmi, Ürün Fotoğraf Çekimi, Müşteri Takip Programı & Web Sitesi">
-    <meta name="keywords" content="Dijital, Pazarlama, Sosyal, Medya, Sosyal Medya, Dijital Pazarlama, Web Programı, Müşteri Takibi, Web Sitesi, Video Çekimi, Ürün Videosu, Tanıtım Filmi">
-    <title>LUMINERDS — MULTISERVICES</title>
+    <meta name="description" content="Luminerds - Digital Marketing, Social Media Management, Product Video, Promotional Film, Product Photography, Customer Tracking Program & Website">
+    <meta name="keywords" content="Digital, Marketing, Social, Media, Social Media, Digital Marketing, Web Program, Customer Tracking, Website, Video Shooting, Product Video, Promotional Film">
+    <title>Luminerds</title>
     <!-- Styles -->
     <link href="assets/css/page.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -19,96 +19,69 @@
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';">
     
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" href="assets/img/favicon.png">
-
-    <!--  Open Graph Tags -->
-    <meta property="og:title" content="LUMINERDS — MULTISERVICES">
-    <meta property="og:description" content="Luminerds - Dijital Pazarlama, Sosyal Medya Yönetimi, Ürün Videosu, Tanıtım Filmi, Ürün Fotoğraf Çekimi, Müşteri Takip Programı & Web Sitesi">
-    <meta property="og:image" content="http://luminerds.com/assets/img/og-img.jpg">
-    <meta property="og:url" content="http://luminerds.com/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% include header.html %}
 </head>
 
 <body>
-
-
-    <!-- Navbar -->
-    <nav class="navbar">
-        <!-- Your navbar content -->
-    </nav>
-    <!-- /.navbar -->
-
-
-    <!-- Header -->
-
-    <header>
-        <!-- Your header content -->
-    </header>
-    <!-- /.header -->
-
-
+    {% include navbar.html %}
+    
     <!-- Main Content -->
     <main class="main-content" id="started">
 
         <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | İşimizi Önemsiyoruz
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+      | We Care About Our Work
+      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
 
         <section class="section">
             <div class="container">
                 <header class="section-header">
-                    <h2>İşimizi Önemsiyoruz</h2>
+                    <h2>We Care About Our Work</h2>
                     <hr>
-                    <p class="lead">İçinde yer aldığımız bütün projelerde unutmadığımız bazı değerler var. Verdiğimiz hizmetin omurgası bu değerlerin birleşiminden oluşuyor.</p>
+                    <p class="lead">In every project we participate in, there are values we never forget. The backbone of our service is built on the combination of these values.</p>
                 </header>
 
                 <div class="row gap-y text-center mt-7">
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-trophy" style="color: #50a1ff"></i></p>
-                        <p class="lead-1">10 Yıllık Deneyim</p>
+                        <p class="lead-1">10 Years of Experience</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-scope" style="color: #563d7c"></i></p>
-                        <p class="lead-1">Sonuç Odaklı Yaklaşım</p>
+                        <p class="lead-1">Results-Oriented Approach</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-lightbulb" style="color: #ffbe00"></i></p>
-                        <p class="lead-1">Yaratıcı Çözümler</p>
+                        <p class="lead-1">Creative Solutions</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-documents" style="color: #37b8af"></i></p>
-                        <p class="lead-1">Özgün İçerikler</p>
+                        <p class="lead-1">Original Content</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-clock" style="color: #eb4a62"></i></p>
-                        <p class="lead-1">Zamanında Teslimat</p>
+                        <p class="lead-1">On-Time Delivery</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-linegraph" style="color: #46da60"></i></p>
-                        <p class="lead-1">Marka Değerinizi Arttırmak</p>
+                        <p class="lead-1">Increase Your Brand Value</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-shield" style="color: #eb4a62"></i></p>
-                        <p class="lead-1">Düzenli Bakım</p>
+                        <p class="lead-1">Regular Maintenance</p>
                     </div>
 
                     <div class="col-md-6 col-xl-3 mb-6 feature-1">
                         <p class="feature-icon"><i class="icon-happy" style="color: #46da60"></i></p>
-                        <p class="lead-1">Mutlu Müşteriler</p>
+                        <p class="lead-1">Happy Customers</p>
                     </div>
 
                 </div>
@@ -118,9 +91,9 @@
 
 
         <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | Mobil Uygulama
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+      | Mobile Application
+      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
 
         <section class="section text-white pb-0 overflow-hidden" style="background-color: #cc3366">
@@ -128,28 +101,28 @@
 
                 <div class="row">
                     <div class="col-md-6 pb-8">
-                        <h2>Mobil Uygulama ile İşinizi Cebinize Taşıyın</h2>
-                        <p>İşletmenize özel hazırlanan mobil uygulama ile artık bütün operasyonlarınıza tek tuşla ulaşın. Randevularınızı, hatırlatmalarınız, rapor ve istastistiklerinize cebinizden kolayca ulaşın! </p>
+                        <h2>Take Your Business to Your Pocket with a Mobile Application</h2>
+                        <p>With a mobile application specially designed for your business, access all your operations with just one touch. Easily check your appointments, reminders, reports, and statistics right from your phone!</p>
 
                         <hr class="w-50px ml-0">
 
                         <div class="row">
                             <div class="col-6">
                                 <p class="lead-5"><i class="icon-genius"></i></p>
-                                <p class="text-uppercase fw-600 mb-0">Hızlı &amp; Kolay Kullanım</p>
-                                <p>Trend programlama dillerini öğrenip, projelerde kullanarak uygulamanızın her geçen gün daha efektif ve hızlı olması için çalışıyoruz.</p>
+                                <p class="text-uppercase fw-600 mb-0">Fast &amp; Easy Use</p>
+                                <p>We work to make your application more effective and faster every day by learning and using trending programming languages.</p>
                             </div>
 
                             <div class="col-6">
                                 <p class="lead-5"><i class="icon-linegraph"></i></p>
-                                <p class="text-uppercase fw-600 mb-0">Rapor, İstatistik ve Analiz</p>
-                                <p>Her projede oluşturduğumuz raporlama ekranı ile geçmişi, istatistik ekranı ile bugünü ve analiz ekranı ile geleceğe dair perspektif sunuyoruz.</p>
+                                <p class="text-uppercase fw-600 mb-0">Reporting, Statistics and Analysis</p>
+                                <p>For every project we create a reporting screen that reflects the past, a statistics screen for the present, and an analysis screen that gives a perspective on the future.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6 align-self-end text-center">
-                        <img src="assets/img/preview/phone-4.png" alt="..." data-aos="fade-up">
+                        <img src="assets/img/preview/phone-4.png" alt="Phone Preview" data-aos="fade-up">
                     </div>
                 </div>
 
@@ -158,129 +131,30 @@
 
 
         <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | CTA
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      !-->
-
-        <section class="section">
-            <div class="container">
-                <header class="section-header">
-                    <h2>İşinizi Önemsiyoruz</h2>
-                    <hr>
-                    <p class="lead">Yaptığımız görüşmelerle, neye ihtiyacınız olduğunu ortaya çıkarıyoruz. Sonrasında, sizin için en uygun çalışmayı hazırlıyoruz.</p>
-                </header>
-
-
-                <div class="row gap-y align-items-center">
-                    <div class="col-md-6 ml-auto">
-                        <h4>Tasarım</h4>
-                        <p>Projenin tasarımını ya da arayüzünü, hedef kitlenin ihtiyaçlarına göre belirliyoruz. Yüksek kalitede, amaca uygun ve verdiği mesajı destekleyen niteliklerle tasarımın temelini atıyoruz. Kullanılan görsel dilin bir bütünlük içinde olması, objelerin bu amaca hizmet edecek şekilde hazırlanması tasarımın esas amacını oluşturuyor. </p>
-                    </div>
-
-                    <div class="col-md-5 order-md-first">
-                        <img class="rounded shadow-2" src="assets/img/preview/header-color.jpg" alt="..." data-aos="fade-right" data-aos-duration="2000">
-                    </div>
-                </div>
-
-
-                <hr class="my-8">
-
-
-                <div class="row gap-y align-items-center">
-                    <div class="col-md-6 mr-auto">
-                        <h4>İçerik</h4>
-                        <p>İyi olarak nitelendirilen içerik, amacına uygun olan, hedef kitle için cazip ve alakalı olan içeriktir, Web için geliştirildiği, kısa, açık ve anlaşılır olmasından belli olur. Müzik, ses, animasyon ya da video görüntüleri, projede iletişimi sağlayan her türlü araç, içerik olarak nitelendirilir. Bu içerikleri birbiriyle uyumlu ve tutarlı bir bütünlük oluşturacak şekilde hazırlıyoruz.</p>
-                    </div>
-
-                    <div class="col-md-5">
-                        <img class="rounded shadow-2" src="assets/img/preview/header-particle.jpg" alt="..." data-aos="fade-left" data-aos-duration="2000">
-                    </div>
-                </div>
-
-
-                <hr class="my-8">
-
-
-                <div class="row gap-y align-items-center">
-                    <div class="col-md-6 ml-auto">
-                        <h4>İşlevsellik</h4>
-                        <p>Proje üzerindeki kodlar, scriptler, formlar ve bağlantılar bireysel ve/veya çoğul olarak mükemmel bir harmoni içinde çalışıyorsa, projeniz iyi bir işlevselliğe sahip demektir. Sayfalar hızlı bir şekilde yüklenebilmeli veya e-ticaret işlemleri kusursuz bir şekilde çalışmalıdır. İyi işlevsellik, projenin öncelikli mesajından uzaklaşmamalıdır. Kısaca, işlevsellik, yazılım diline ve teknolojiye iyi bir şekilde hakim olmayı gerektirir.</p>
-                    </div>
-
-                    <div class="col-md-5 order-md-first">
-                        <img class="rounded shadow-2" src="assets/img/preview/header-image.jpg" alt="..." data-aos="fade-right" data-aos-duration="2000">
-                    </div>
-                </div>
-
-
-
-                <hr class="my-8">
-
-
-                <div class="row gap-y align-items-center">
-                    <div class="col-md-6 mr-auto">
-
-                        <h4>Esneklik</h4>
-                        <p>Kullanıcının bilgiye rahatça ulaşbilmesi için projenin bu doğrultuda iyi kurgulanması gerekir. Menü yapısının düzgün ve karmaşık olmayan bir şekilde düzenlenmiş olması, düzgün ve hızlı çalışması, alt başlıklara kolayca ulaşılabilir olması, projenin esnek yapısı için önemlidir. Esnekliğin belirli örnekleri; navigasyon elemanlarının tutarlı kullanımını, bilgi ve içerik hiyerarşisinin kolay ve net bulunmasını, doğru bir şekilde tanımlanmış bağlantıları ve son olarak gereksiz grafik/animasyon temizliğini kapsar.</p>
-                    </div>
-
-                    <div class="col-md-5">
-                        <img class="rounded shadow-2" src="assets/img/preview/header-slider.jpg" alt="..." data-aos="fade-left" data-aos-duration="2000">
-                    </div>
-                </div>
-
-
-
-                <hr class="my-8">
-
-
-                <div class="row gap-y align-items-center">
-                    <div class="col-md-6 ml-auto">
-                        <h4>Uyumluluk</h4>
-                        <p>Web sitesinin, tüm platform kullanıcıları ve farklı tarayıcılar için belli bir standarda sahip olması sağlanır. Bu standartlar, tasarım, yazılım ve kullanılabilirlik kriterlerine göre belirlenir. Web sitesinin tasarımı ve yazılımı güncel platformlarda, çapraz tarayıcı erişimlerinde ve farklı ortam gösterimlerinde sorunsuz olarak çalışır. Ayrıca web tasarım normlarına göre web sitesinin içeriği ve alt yapısı da Arama Motorları (SEO) standartlarına uygun şekilde hazırlanır.</p>
-                    </div>
-
-                    <div class="col-md-5 order-md-first">
-                        <img class="rounded shadow-2" src="assets/img/preview/header-gradient.jpg" alt="..." data-aos="fade-up" data-aos-duration="2000">
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-
-        <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       | CTA
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
         <section class="section text-white py-8">
             <canvas class="overlay opacity-95" data-granim="#cc3366,#764ba2,#00cdac,#3cba92"></canvas>
 
             <div class="container">
                 <header class="section-header">
-                    <h2 class="display-3 fw-400">Bize <span class="mark-underline">Ulaşın</span></h2>
+                    <h2 class="display-3 fw-400">Contact <span class="mark-underline">Us</span></h2>
                     <hr>
-                    <p class="lead-2">Eğer hala karar veremediyseniz, aşağıdaki butona tıklayarak veya eposta göndererek bize ulaşabilirsiniz.<br><strong>Luminerds</strong> </p>
+                    <p class="lead-2">If you still haven't decided, you can contact us by clicking the button below or sending an email.<br><strong>Luminerds</strong></p>
                 </header>
 
                 <p class="text-center">
-                    <a class="btn btn-xl btn-round btn-light w-250" href="tel:+905454611289">Hemen Ara</a><br>
-                    <small><a class="text-white opacity-80" href="mailto:info@luminerds.com">e-posta göndermek için <a href="mailto:info@luminerds.com">tıklayın</a></a></small>
+                    <a class="btn btn-xl btn-round btn-light w-250" href="tel:+905454611289">Call Now</a><br>
+                    <small><a class="text-white opacity-80" href="mailto:info@luminerds.com">click here to send an email</a></small>
                 </p>
             </div>
         </section>
 
     </main>
 
-
-    <!-- Footer -->
-
-    <footer>
-        <!-- Your footer content -->
-    </footer>
-    <!-- /.footer -->
+    {% include footer.html %}
     <a id="scroolButton"></a>
 
     <div id="popup-cm" class="popup bg-img text-white border-0 col-10 col-md-6 col-lg-5 col-xl-4 p-6" data-position="bottom-center" data-animation="slide-up" data-autoshow="3000" style="background-image: url(assets/img/popup.png)" data-overlay="1">
