--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@ title: Luminerds
     {% include footer.html %}
     <a id="scroolButton"></a>
 
-    <div id="popup-cm" class="popup bg-img text-white border-0 col-10 col-md-6 col-lg-5 col-xl-4 p-6" data-position="bottom-center" data-animation="slide-up" data-autoshow="3000" style="background-image: url(assets/img/popup.png)" data-overlay="1">
+    <!-- <div id="popup-cm" class="popup bg-img text-white border-0 col-10 col-md-6 col-lg-5 col-xl-4 p-6" data-position="bottom-center" data-animation="slide-up" data-autoshow="3000" style="background-image: url(assets/img/popup.png)" data-overlay="1">
         <button type="button" class="close" data-dismiss="popup" aria-label="Close" style="opacity: 0.75">
             <span aria-hidden="true" style="color: #fff">&times;</span>
         </button>
 
         <a class="text-center position-relative" href="https://www.facebook.com/Luminerds.Multiservice/posts/2180693555528542" target="_blank" style="display: inline-block; width: 100%; height: 180px;"></a>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="assets/js/page.min.js"></script>
